--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         console.log('html init');
+        setTimeout(() => {
+            console.log(window.myLib);
+        }, 800)
     </script>
 </body>
 
